--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -8,7 +8,7 @@ $white1: #fff;
 $white2: #f7f7f7;
 $grey1: #f1f1f1;
 $grey2: #ccc;
-$black1: #222;
+$black1: #7E827A;
 $black2: #000;
 
 $white: #fff;
