--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,11 +1,13 @@
 $button-padding-width: 12px;
-$button-padding-height: 8px;
+$button-padding-height: 4px;
 
 button.sx-button {
     font-size: 1.5rem;
     padding: $button-padding-height $button-padding-width;
     margin-top: 10px;
     border: none;
+    border-radius: 4px;
+    transition: background 0.3s ease, color 0.3s ease;
 
     // CAPS
     &[data-uppercase] {
@@ -14,6 +16,19 @@ button.sx-button {
 
     &[data-bold] {
         font-weight: bold;
+    }
+
+    // INVERTED
+    &[data-inverted] {
+        background: none;
+        border: 2px solid $white1;
+        color: $white1;
+        border-radius: 4px;
+
+        &:hover {
+            background: $white1;
+            color: $black2; 
+        }
     }
 
     //-------------
@@ -47,6 +62,11 @@ button.sx-button {
     // theme
     &[data-color="theme1"] {
         background-color: $theme1;
+        color: $white1;
+
+        &:hover {
+            background-color: darken($theme1, 10%);
+        }
     }
     &[data-color="theme2"] {
         background-color: $theme2;
@@ -59,6 +79,7 @@ button.sx-button {
     }
     &[data-color="theme5"] {
         background-color: $theme5;
+        color: $white;
     }
 
     // greyscale
