--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,6 +1,28 @@
 .site-nav {
-    background-color: $theme5;
+    position: fixed;
+    top: 40px;
+    background: url("../img/pipe.svg");
     width: 100%;
+    height: 90px;
+    z-index: 10;
+    transition: transform 1s ease-out;
+
+    .logo-wrapper {
+        height: 50px;
+        width: 130px;
+        position: relative;
+        background: red;
+
+        .logo {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+            height: 130px;
+            width: auto;
+            display: block;
+        }
+    }
 
     .desktop {
         display: flex;
@@ -13,11 +35,38 @@
 
             a {
                 text-decoration: none;
-                li {
-                    list-style: none;
+
+                .nav-link {
+                    position: relative;
+                    width: 140px;
                     margin-left: 15px;
-                    color: $black;
-                    font-size: 1.2rem;
+                    li {
+                        list-style: none;
+                        text-align: center;
+                        color: $white1;
+                        font-size: 1.4rem;
+                        font-weight: bold;
+                        z-index: 2;
+                        position: relative;
+                        pointer-events: none;
+                    }
+                    .img-wrapper {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        width: 100%;
+                        z-index: 1;
+
+                        img {
+                            transition: transform 2s;
+                            display: block;
+                        }
+                        img:hover {
+                            transform: rotate(270deg);
+                        }
+                    }
+                    
                 }
             }
         }
@@ -33,15 +82,14 @@
         align-items: center;
 
         .hamburger {
-            span {
-                background-color: $theme2;
-                display: block;
-                width: 36px;
-                height: 5px;
-                border-radius: 3px;
-            }
-            span:nth-child(2) {
-                margin: 5px 0;
+            width: 150px;
+            position: relative;
+
+            img {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
             }
         }
 
@@ -63,7 +111,7 @@
             li {
                 list-style: none;
                 padding: 10px 0 10px 4%;
-                color: $black;
+                color: $white;
                 font-size: 1.2rem;
             }
         }
