--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -2,17 +2,17 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-    font-family: "Poppins";
+    font-family: "proxima-soft";
 }
 
 h1 {
 
 }
 h2 {
-
+	font-size: 4rem;
 }
 h3 {
-
+	font-size: 2.4rem;
 }
 h4 {
 
@@ -21,5 +21,14 @@ h5 {
 
 }
 p {
+	font-size: 1.2rem;
+}
+p.sub-heading {
+	font-size: 2rem;
+	color: $black1;
+}
 
+img {
+	width: 100%;
+	display: block;
 }
